src/test/deca/context/valid/provided/test18.deca
{
    int x;
    float y;
    print(x*y);
    print(x/y);
    print(x-y);
    print(x+y);
}