src/test/deca/context/invalid/provided/duoreadint.deca

{int x = 2;
x = 5;
int y = readint();
int z = readfloat() ; 
 z= y 
 print(z);
}

/*  Commentaire  */
